--- a/Rontofile.yml
+++ b/Rontofile.yml
@@ -9,10 +9,9 @@ docker:  # if defined this requests docker
   root_dir:
     extern:
     # intern: /yocto/root
-repo:  # if defined this defines repo
-  url: URL
-  manifest: MANIFEST
-  branch: master
+repo:
+  url: git@github.com:almedso/repo-yocto.git
+# git:
 init:
-  script: 
+  script:
   template:
